--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="heading">
-        <h1>Welcom to Simon Game Play</h1>
+        <h1>Welcome to Simon Game Play</h1>
         <button  class="btn btn-danger" > Click to Start game</button>
         <h4 id="score">High Score</h4>
         <h3 id="level"> Click to Start game.</h3>
